--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ cap16-arquivos-io/extras2/*.jpg
 cap16-arquivos-io/extras3_excel_files/*.xlsx
 
 ATIVIDADES/menu_project/clientes.csv
+_mac
+bin
+filetypes
+include
+inspection
+*.xml
+.idea
